Modulo_4_Kubernates/22_sesion/appnode/clase16-ingress/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: redis 
spec: 
  serviceName: "redis"
  replicas: 2
  selector: 
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        command: ["sh", "-c"]
        args:
        - |
          if [[ "$(hostname)" == *-0 ]]; then
            echo "Starting redis master";
            exec redis-server 1 --appendonly yes;
          else
            echo "Starting Redis Replica, to redis -0";
            redis-server --replicaof redis-0.redis.default.svc.cluster.local 6379;
          fi
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources: 
        requests:
          storage: 100Mi
