Modulo_4_Kubernates/22_sesion/appnode/clase16-ingress/ingress-balancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: demo-ingress 
spec: 
  ingressClassName: nginx
  rules: 
  - host: demo.local
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: nginx-custom-svc 
            port:
              number: 80
      - path: /legacy
        pathType: Prefix
        backend: 
          service: 
            name: web-service
            port:
              number: 80
